fixed spacing in second section when window resized

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ h1 {
 h2 {
   font-size: 1.75rem;
   font-weight: bold;
+  line-height: 1.3;
 }
 
 h5 {
@@ -324,7 +325,9 @@ h5 {
     display: block;
   }
   .module-new-school-district-margin {
-    margin: 0;
+    margin-right: 0;
+    margin-bottom: 50px;
+    text-align: center;
   }
   h1 {
     font-size: 1.85rem;
